--- a/index.html
+++ b/index.html
@@ -11,26 +11,31 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+  <!-- Шапка-->
   <body>
     <header class="page-header">
-      <nav class="page-navigation">
-        <a class="logo link" href=""><span class="accent">Web</span>Studio </a>
-        <ul class="menu list">
-          <li class="menu-item">
-            <a href="#" class="menu-link link current">Студія</a>
-          </li>
-          <li class="menu-item">
-            <a href="./portfolio.html" class="menu-link link">Портфоліо</a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link link">Контакти</a>
-          </li>
-        </ul>
-
-        <ul class="menu list">
+      <div class="container page-header-container">
+        <nav class="page-navigation">
+          <a class="logo link" href=""><span class="accent">Web</span>Studio </a>
+          <ul class="menu list">
+            <li class="menu-item">
+              <a href="#" class="menu-link link current">Студія</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="menu-link link">Портфоліо</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact list">
           <li class="menu-item">
             <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -38,9 +43,10 @@
             <a class="contact-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
 
+    <!-- Hero -->
     <main>
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
@@ -48,106 +54,122 @@
       </section>
 
       <section class="section">
-        <h2 class="section-title visually-hidden">Наші переваги</h2>
-        <ul class="benefit-list list">
-          <li>
-            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
+        <div class="container page-header-container">
+          <h2 class="section-title visually-hidden">Наші переваги</h2>
+          <ul class="benefit-list list">
+            <li class="elements">
+              <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="title">ПЛАНУВАННЯ</h3>
-            <p class="text">Так само консультація з широким активом значною мірою зумовлює</p>
-          </li>
+            <li>
+              <h3 class="title">ПЛАНУВАННЯ</h3>
+              <p class="text">Так само консультація з широким активом значною мірою зумовлює</p>
+            </li>
 
-          <li>
-            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="text">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+            <li>
+              <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="text">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="section-title">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/box1(2).jpg" alt="Людина працює за комп'ютером" width="370" />
-          </li>
-          <li>
-            <img
-              src="./images/box2.jpg"
-              alt="Людина працює за комп'ютером і телефоном"
-              width="370"
-            />
-          </li>
-          <li>
-            <img src="./images/box3.jpg" alt="Людина працює за планшетом" width="370" />
-          </li>
-        </ul>
+      <section class="section-title-page">
+        <div class="container page-header-containe">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="foto-item list">
+            <li class="foto-elements">
+              <img src="./images/box1(2).jpg" alt="Людина працює за комп'ютером" width="370" />
+            </li>
+            <li>
+              <img
+                src="./images/box2.jpg"
+                alt="Людина працює за комп'ютером і телефоном"
+                width="370"
+              />
+            </li>
+            <li>
+              <img src="./images/box3.jpg" alt="Людина працює за планшетом" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="imagene-fone">
-            <img src="./images/img.jpg" alt="Усміхнений хлопець в окулярах" width="270" />
-            <h3 class="title-page">Ігор Дем'яненко</h3>
-            <p class="text-page">Product Designer</p>
-          </li>
+        <div class="container page-header-containe">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="imagene-fone">
+              <img src="./images/img.jpg" alt="Усміхнений хлопець в окулярах" width="270" />
+              <div class="teamlist">
+                <h3 class="title-page">Ігор Дем'яненко</h3>
+                <p class="text-page">Product Designer</p>
+              </div>
+            </li>
 
-          <li class="imagene-fone">
-            <img src="./images/img1.jpg" alt="Усміхнена дівчина в окулярах" width="270" />
-            <h3 class="title-page">Ольга Рєпіна</h3>
-            <p class="text-page">Frontend Developer</p>
-          </li>
-          <li class="imagene-fone">
-            <img src="./images/img2.jpg" alt="Усміхнений хлопець" width="270" />
-            <h3 class="title-page">Микола Тарасов</h3>
-            <p class="text-page">Frontend Developer</p>
-          </li>
+            <li class="imagene-fone">
+              <img src="./images/img1.jpg" alt="Усміхнена дівчина в окулярах" width="270" />
+              <div class="teamlist">
+                <h3 class="title-page">Ольга Рєпіна</h3>
+                <p class="text-page">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="imagene-fone">
+              <img src="./images/img2.jpg" alt="Усміхнений хлопець" width="270" />
+              <div class="teamlist">
+                <h3 class="title-page">Микола Тарасов</h3>
+                <p class="text-page">Frontend Developer</p>
+              </div>
+            </li>
 
-          <li class="imagene-fone">
-            <img src="./images/img3.jpg" alt="Усміхнений хлопець в окулярах" width="270" />
-            <h3 class="title-page">Михайло Єрмаков</h3>
-            <p class="text-page">UI Designer</p>
-          </li>
-        </ul>
+            <li class="imagene-fone">
+              <img src="./images/img3.jpg" alt="Усміхнений хлопець в окулярах" width="270" />
+              <div class="teamlist">
+                <h3 class="title-page">Михайло Єрмаков</h3>
+                <p class="text-page">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="page-footer">
-      <a class="logo-footer link" href=""><span class="accent">Web</span>Studio </a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              class="adrees-footer link"
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
+      <div class="container">
+        <a class="logo-footer link" href=""><span class="accent">Web</span>Studio </a>
+        <address class="adrees-page">
+          <ul class="list">
+            <li>
+              <a
+                class="adrees-footer link"
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
 
-          <li>
-            <a class="contact-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
+            <li>
+              <a class="contact-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
 
-          <li>
-            <a class="contact-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+            <li>
+              <a class="contact-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
