--- a/portfolio.html
+++ b/portfolio.html
@@ -16,21 +16,22 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="page-navigation">
-        <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio </a>
-        <ul class="menu list">
-          <li class="menu-item">
-            <a href="./index.html" class="menu-link link">Студія</a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link link current">Портфоліо</a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link link">Контакти</a>
-          </li>
-        </ul>
-
-        <ul class="menu list">
+      <div class="container page-header-container">
+        <nav class="page-navigation">
+          <a class="logo link" href="./index.html"><span class="accent">Web</span>Studio </a>
+          <ul class="menu list">
+            <li class="menu-item">
+              <a href="./index.html" class="menu-link link">Студія</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link link current">Портфоліо</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact list">
           <li class="menu-item">
             <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -38,101 +39,125 @@
             <a class="contact-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
 
     <main>
       <section class="">
-        <h1 class="visually-hidden">Портфоліо</h1>
-        <ul class="page-main list">
-          <li><button type="button" class="pagemain">Усі</button></li>
-          <li><button type="button" class="pagemain">Веб-сайти</button></li>
-          <li><button type="button" class="pagemain">Додатки</button></li>
-          <li><button type="button" class="pagemain">Дизайн</button></li>
-          <li><button type="button" class="pagemain">Маркетинг</button></li>
-        </ul>
+        <div class="container">
+          <h1 class="visually-hidden">Портфоліо</h1>
+          <ul class="page-main list">
+            <li><button type="button" class="pagemain">Усі</button></li>
+            <li><button type="button" class="pagemain">Веб-сайти</button></li>
+            <li><button type="button" class="pagemain">Додатки</button></li>
+            <li><button type="button" class="pagemain">Дизайн</button></li>
+            <li><button type="button" class="pagemain">Маркетинг</button></li>
+          </ul>
+        </div>
 
-        <ul class="list">
-          <li>
-            <img src="./images/img(5).jpg" alt="Ноутбук" width="370" />
-            <h2 class="pagetest">Технокряк</h2>
-            <p class="pagelist">Веб-сайт</p>
-          </li>
+        <div class="container">
+          <ul class="flex-container list">
+            <li>
+              <img src="./images/img(5).jpg" alt="Ноутбук" width="370" />
+              <div class="flex-element">
+                <h2 class="pagetest">Технокряк</h2>
+                <p class="pagelist">Веб-сайт</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/img(6).jpg" alt="Люди з м'ячем" width="370" />
-            <h2 class="pagetest">Постер New Orlean vs Golden Star</h2>
-            <p class="pagelist">Дизайн</p>
-          </li>
+            <li>
+              <img src="./images/img(6).jpg" alt="Люди з м'ячем" width="370" />
+              <div class="flex-element">
+                <h2 class="pagetest">Постер New Orlean vs Golden Star</h2>
+                <p class="pagelist">Дизайн</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/img(7).jpg" alt="Еблема" width="370" />
-            <h2 class="pagetest">Ресторан Seafood</h2>
-            <p class="pagelist">Додаток</p>
-          </li>
+            <li>
+              <img src="./images/img(7).jpg" alt="Еблема" width="370" />
+              <div class="flex-element">
+                <h2 class="pagetest">Ресторан Seafood</h2>
+                <p class="pagelist">Додаток</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/img(8).jpg" alt="Навушники" width="370" />
-            <h2 class="pagetest">Проєкт Prime</h2>
-            <p class="pagelist">Маркетинг</p>
-          </li>
+            <li>
+              <img src="./images/img(8).jpg" alt="Навушники" width="370" />
+              <div class="flex-element">
+                <h2 class="pagetest">Проєкт Prime</h2>
+                <p class="pagelist">Маркетинг</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/img(9).jpg" alt="Коробочки" width="370" />
-            <h2 class="pagetest">Проєкт Boxes</h2>
-            <p class="pagelist">Додаток</p>
-          </li>
+            <li>
+              <img src="./images/img(9).jpg" alt="Коробочки" width="370" />
+              <div class="flex-element">
+                <h2 class="pagetest">Проєкт Boxes</h2>
+                <p class="pagelist">Додаток</p>
+              </div>
+            </li>
 
-          <li>
-            <img src=".//images/img(10).jpg" alt="Монітор" width="370" />
-            <h2 class="pagetest">Inspiration has no Borders</h2>
-            <p class="pagelist">Веб-сайт</p>
-          </li>
+            <li>
+              <img src=".//images/img(10).jpg" alt="Монітор" width="370" />
+              <div class="flex-element">
+                <h2 class="pagetest">Inspiration has no Borders</h2>
+                <p class="pagelist">Веб-сайт</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/img(11).jpg" alt="Книжка" width="370" />
-            <h2 class="pagetest">Видання Limited Edition</h2>
-            <p class="pagelist">Дизайн</p>
-          </li>
+            <li>
+              <img src="./images/img(11).jpg" alt="Книжка" width="370" />
+              <div class="flex-element">
+                <h2 class="pagetest">Видання Limited Edition</h2>
+                <p class="pagelist">Дизайн</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/img(12).jpg" alt="Бізнес" width="370" />
-            <h2 class="pagetest">Проєкт LAB</h2>
-            <p class="pagelist">Маркетинг</p>
-          </li>
+            <li>
+              <img src="./images/img(12).jpg" alt="Бізнес" width="370" />
+              <div class="flex-element">
+                <h2 class="pagetest">Проєкт LAB</h2>
+                <p class="pagelist">Маркетинг</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/img(13).jpg" alt="Людина працює за ноутбук" width="370" />
-            <h2 class="pagetest">Growing Business</h2>
-            <p class="pagelist">Додаток</p>
-          </li>
-        </ul>
+            <li>
+              <img src="./images/img(13).jpg" alt="Людина працює за ноутбук" width="370" />
+              <div class="flex-element">
+                <h2 class="pagetest">Growing Business</h2>
+                <p class="pagelist">Додаток</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="page-footer">
-      <a class="logo-footer link" href=""><span class="accent">Web</span>Studio </a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              class="adrees-footer link"
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
+      <div class="container">
+        <a class="logo-footer link" href=""><span class="accent">Web</span>Studio </a>
+        <address class="adrees-page">
+          <ul class="list">
+            <li>
+              <a
+                class="adrees-footer link"
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
 
-          <li>
-            <a class="contact-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
+            <li>
+              <a class="contact-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
 
-          <li>
-            <a class="contact-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+            <li>
+              <a class="contact-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
