--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <button type="button" class="button">Замовити послугу</button>
       </section>
 
+      <!-- Особливості -->
+
       <section class="section">
         <div class="container page-header-container">
           <h2 class="section-title visually-hidden">Наші переваги</h2>
@@ -63,19 +65,19 @@
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="elements">
               <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
 
-            <li>
+            <li class="elements">
               <h3 class="title">ПЛАНУВАННЯ</h3>
               <p class="text">Так само консультація з широким активом значною мірою зумовлює</p>
             </li>
 
-            <li>
+            <li class="elements">
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -84,6 +86,8 @@
           </ul>
         </div>
       </section>
+
+      <!-- Чим ми займаємося -->
 
       <section class="section-title-page">
         <div class="container page-header-containe">
@@ -105,6 +109,8 @@
           </ul>
         </div>
       </section>
+
+      <!-- Наша команда -->
 
       <section class="section team">
         <div class="container page-header-containe">
@@ -145,12 +151,14 @@
       </section>
     </main>
 
+    <!-- Footer -->
+
     <footer class="page-footer">
       <div class="container">
         <a class="logo-footer link" href=""><span class="accent">Web</span>Studio </a>
         <address class="adrees-page">
           <ul class="list">
-            <li>
+            <li class="page-contact">
               <a
                 class="adrees-footer link"
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
@@ -160,11 +168,11 @@
               >
             </li>
 
-            <li>
+            <li class="page-contact">
               <a class="contact-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
 
-            <li>
+            <li class="page-contact">
               <a class="contact-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
